fix(proxy): Use the Factory as proxy single source of truth